--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WilliamPort</title>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6Le32ewrAAAAADY-MSHGh9zSiXeZMcTZuA66du7R"></script>
+    <script>
+        grecaptcha.enterprise.ready(async () => {
+            const token = await grecaptcha.enterprise.execute('6Le32ewrAAAAADY-MSHGh9zSiXeZMcTZuA66du7R', { action: 'LOGIN' });
+        });
+        </script>
 </head>
 <body>
-    
+
 </body>
 </html>
