--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 data = {
                     "event": {
                         "token": token,
+                        "expectedAction": e,
                         "siteKey": "6Le32ewrAAAAADY-MSHGh9zSiXeZMcTZuA66du7R",
                     }
                 }
