--- a/projects/documenthandler/privacy-policy/index.html
+++ b/projects/documenthandler/privacy-policy/index.html
@@ -49,6 +49,60 @@
     <title>Document Handler Privacy Policy</title>
 </head>
 <body>
-    
+    <div id="privacy-policy-text">
+        <h2 id="privacy-policy-for-document-handler-by-williamport">Privacy Policy for Document Handler by WilliamPort</h2>
+        <p><strong>Last Updated: October 18, 2025</strong></p>
+        <h3 id="introduction">Introduction</h3>
+        <p>This Privacy Policy describes how Document Handler by WilliamPort (&quot;we,&quot; &quot;us,&quot; or
+            &quot;our&quot;) collects, uses, and protects the personal information of users when using our Google Sheets
+            application (&quot;Document Handler&quot;). By using Document Handler, you consent to the practices described in
+            this policy.</p>
+        <hr>
+        <h3 id="information-we-collect">Information We Collect</h3>
+        <p>We may collect the following types of information:</p>
+        <ul>
+            <li><strong>Personal Information</strong>: Including your name, email address, and details provided during Google
+                account authentication.</li>
+            <li><strong>Usage Data</strong>: Information on how you interact with Document Handler, such as IP addresses,
+                browser types, pages visited, and timestamps.</li>
+            <li><strong>Document Activity</strong>: Details regarding your document creation, sharing, and any actions
+                performed, like permission changes.</li>
+        </ul>
+        <h3 id="how-we-use-your-information">How We Use Your Information</h3>
+        <p>We use your information for purposes such as:</p>
+        <ul>
+            <li><strong>Service Provision</strong>: To enable the creation and sharing of documents and presentations through
+                Document Handler.</li>
+            <li><strong>Service Improvement</strong>: To analyze user engagement and enhance overall user experience.</li>
+            <li><strong>Communication</strong>: To send updates, respond to inquiries, and provide support.</li>
+        </ul>
+        <h3 id="data-sharing-and-disclosure">Data Sharing and Disclosure</h3>
+        <p>We do not sell or trade your personal information. However, we may share information under the following
+            circumstances:</p>
+        <ul>
+            <li><strong>With Service Providers</strong>: Third parties may assist with the operation of Document Handler, bound
+                by confidentiality agreements.</li>
+            <li><strong>Legal Requirements</strong>: We may disclose information if required by law or in response to valid
+                requests from authorities.</li>
+        </ul>
+        <h3 id="security-of-your-information">Security of Your Information</h3>
+        <p>We take reasonable measures to safeguard your information from unauthorized access or disclosure. However, we cannot
+            guarantee complete security due to varying factors associated with internet transmission.</p>
+        <h3 id="your-rights">Your Rights</h3>
+        <p>You have the following rights regarding your personal information:</p>
+        <ul>
+            <li>Accessing your information.</li>
+            <li>Requesting corrections to your information.</li>
+            <li>Requesting deletion of your information.</li>
+        </ul>
+        <p>To exercise these rights, contact us using the information below.</p>
+        <h3 id="changes-to-this-privacy-policy">Changes to This Privacy Policy</h3>
+        <p>We may update this Privacy Policy periodically. Any changes will be effective upon updating the &quot;Last
+            Updated&quot; date above. Continued use of Document Handler indicates acceptance of the updated policy.</p>
+        <h3 id="contact-us">Contact Us</h3>
+        <p>For questions or concerns about this Privacy Policy, please contact us at:</p>
+        <p>WilliamPort<br>mcfakeypants.fakey@gmail.com</p>
+
+    </div>
 </body>
 </html>
