--- a/projects/documenthandler/terms-of-service/index.html
+++ b/projects/documenthandler/terms-of-service/index.html
@@ -49,6 +49,41 @@
     <title>Document Handler TOS</title>
 </head>
 <body>
-    
+    <div class="tos-text">
+        <h2 id="terms-of-service-for-document-handler-by-williamport">Terms of Service for Document Handler by WilliamPort</h2>
+        <p><strong>Last Updated: October 18, 2025</strong></p>
+        <h3 id="acceptance-of-terms">Acceptance of Terms</h3>
+        <p>Using Document Handler by WilliamPort (&quot;Document Handler&quot;) signifies acceptance of these Terms of Service
+            (&quot;Terms&quot;). If you do not agree to these Terms, refrain from using Document Handler.</p>
+        <h3 id="description-of-service">Description of Service</h3>
+        <p>Document Handler is a free Google Sheets application designed for simplification in creating and sharing
+            individualized document copies, especially for educators needing to distribute materials to classroom participants
+            while managing permissions and tracking usage.</p>
+        <h3 id="user-responsibilities">User Responsibilities</h3>
+        <p>You agree to use Document Handler in compliance with applicable laws and regulations. You shall not:</p>
+        <ul>
+            <li>Use Document Handler for unauthorized or illegal purposes.</li>
+            <li>Disrupt the performance or security of Document Handler.</li>
+            <li>Attempt unauthorized access to data not allocated to you.</li>
+        </ul>
+        <h3 id="ownership-and-intellectual-property">Ownership and Intellectual Property</h3>
+        <p>All content, features, and functionalities of Document Handler are free to use, but proper attribution to WilliamPort
+            is encouraged.</p>
+        <h3 id="limitation-of-liability">Limitation of Liability</h3>
+        <p>Document Handler is provided on an &quot;as-is&quot; basis. We do not warrant uninterrupted service or error-free
+            performance, and we are not liable for any direct or indirect damages arising from your use of Document Handler.</p>
+        <h3 id="indemnification">Indemnification</h3>
+        <p>You agree to indemnify WilliamPort and its associates from claims or damages arising from your use of Document
+            Handler.</p>
+        <h3 id="changes-to-these-terms">Changes to These Terms</h3>
+        <p>We may modify these Terms occasionally, with updates becoming effective upon revising the &quot;Last Updated&quot;
+            date. Continued use of Document Handler indicates acceptance of the new Terms.</p>
+        <h3 id="governing-law">Governing Law</h3>
+        <p>These Terms shall be governed by laws applicable in [Your Jurisdiction].</p>
+        <h3 id="contact-information">Contact Information</h3>
+        <p>For questions about these Terms, contact us at:</p>
+        <p>WilliamPort<br>mcfakeypants.fakey@gmail.com</p>
+
+    </div>
 </body>
 </html>
