--- a/projects/documenthandler/terms-of-service/index.html
+++ b/projects/documenthandler/terms-of-service/index.html
@@ -79,7 +79,7 @@
         <p>We may modify these Terms occasionally, with updates becoming effective upon revising the &quot;Last Updated&quot;
             date. Continued use of Document Handler indicates acceptance of the new Terms.</p>
         <h3 id="governing-law">Governing Law</h3>
-        <p>These Terms shall be governed by laws applicable in [Your Jurisdiction].</p>
+        <p>These Terms shall be governed by laws applicable in Chicago.</p>
         <h3 id="contact-information">Contact Information</h3>
         <p>For questions about these Terms, contact us at:</p>
         <p>WilliamPort<br>mcfakeypants.fakey@gmail.com</p>
