Add google site verification

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="LArZYe70AX1__0bGi6PGDc-E2wfbnbT4SoQBi4lxRus" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6NW8S95VLK"></script>
     <script>
             function onClick(e) {
