Add Back Buttons

--- a/projects/documenthandler/index.html
+++ b/projects/documenthandler/index.html
@@ -89,6 +89,23 @@
             margin: 0 auto 20px;
         }
     </style>
+    <style>
+                .back-button {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            color: white;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            text-align: center;
+            text-decoration: none;
+            width: fit-content;
+        }
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 
 <body>
@@ -108,8 +125,9 @@
             <li><a href="https://williamportdev.github.io/projects/documenthandler/terms-of-service">Terms of Service</a></li>
             <li><a href="https://williamportdev.github.io/support">Support</a></li>
             <li><a href="https://forms.gle/k7AQustZ867zMSde7">Report an Issue</a></li>
-            <li><a href="https://williamportdev.github.io/post-install-tip">Post-Install Instructions</a></li>
+            <li><a href="[Link to Post Install Instructions]">Post-Install Instructions</a></li>
         </ul>
+        <a href="https://williamportdev.github.io" class="back-button">Back to Homepage</a>
     </div>
 
 </body>
