--- a/projects/documenthandler/post-install-tip/index.html
+++ b/projects/documenthandler/post-install-tip/index.html
@@ -49,6 +49,6 @@
     <title>Document Handler Post Install Tip</title>
 </head>
 <body>
-    
+    <a href="https://williamportdev.github.io/projects/documenthandler" class="back-button">Back to Project Page</a>
 </body>
 </html>
