--- a/projects/documenthandler/support/index.html
+++ b/projects/documenthandler/support/index.html
@@ -36,6 +36,24 @@
             });
         }
     </script>
+    <style>
+        .back-button {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            color: white;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            text-align: center;
+            text-decoration: none;
+            width: fit-content;
+        }
+    
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
     <!-- Google tag (gtag.js) -->
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -49,6 +67,6 @@
     <title>Document Handler Support</title>
 </head>
 <body>
-    
+    <a href="https://williamportdev.github.io/projects/documenthandler" class="back-button">Back to Project Page</a>
 </body>
 </html>
