--- a/projects/documenthandler/terms-of-service/index.html
+++ b/projects/documenthandler/terms-of-service/index.html
@@ -88,6 +88,24 @@
             margin: 20px 0;
         }
     </style>
+    <style>
+        .back-button {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            color: white;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            text-align: center;
+            text-decoration: none;
+            width: fit-content;
+        }
+    
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
     <!-- Google tag (gtag.js) -->
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -101,6 +119,7 @@
     <title>Document Handler TOS</title>
 </head>
 <body>
+    <a href="https://williamportdev.github.io/projects/documenthandler" class="back-button">Back to Project Page</a>
     <h1>Terms of Service for Document Handler by WilliamPort</h1>
     <p><strong>Last Updated: October 18, 2025</strong></p>
     
