Fixed incorect permalinks

--- a/projects/documenthandler/index.html
+++ b/projects/documenthandler/index.html
@@ -123,9 +123,9 @@
         <ul class="links">
             <li><a href="https://williamportdev.github.io/projects/documenthandler/privacy-policy">Privacy Policy</a></li>
             <li><a href="https://williamportdev.github.io/projects/documenthandler/terms-of-service">Terms of Service</a></li>
-            <li><a href="https://williamportdev.github.io/support">Support</a></li>
+            <li><a href="https://williamportdev.github.io/projects/documenthandler/support">Support</a></li>
             <li><a href="https://forms.gle/k7AQustZ867zMSde7">Report an Issue</a></li>
-            <li><a href="[Link to Post Install Instructions]">Post-Install Instructions</a></li>
+            <li><a href="https://williamportdev.github.io/projects/documenthandler/post-install-tip">Post-Install Instructions</a></li>
         </ul>
         <a href="https://williamportdev.github.io" class="back-button">Back to Homepage</a>
     </div>
